--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ukrainians in CS2</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
-    <h1>Linux</h1>
-    <img src="img/11.1.png", alt="Linux">
+    <h1>Pro teams in CS2 with Ukrainians in roster</h1>
+    <section>
+        <h2>
+            <img src="https://www.hltv.org/img/static/flags/30x20/UA.gif" alt="Ukraine">
+            Natus Vincere 
+            <img src="https://img-cdn.hltv.org/teamlogo/9iMirAi7ArBLNU8p3kqUTZ.svg?ixlib=java-2.1.0&s=4dd8635be16122656093ae9884675d0c" alt="natus_vincere" width="50">
+        </h2>
+        <p>
+            <fieldset>
+                <figure >
+                    <img src="https://img-cdn.hltv.org/playerbodyshot/b29J2ESjLLqO1XxMSOjRR9.png?ixlib=java-2.1.0&w=400&s=247d23aa96632ab1fa5c77b5c7d1a62a" alt="b1t" width="150">
+                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/UA.gif" alt="Ukraine" width="20">b1t</figcaption>
+                    <img src="https://img-cdn.hltv.org/playerbodyshot/5rF2y0CYgGthv6O3qyfQlK.png?ixlib=java-2.1.0&w=400&s=aac1842164cf6f247fdabfb18a57009e" alt="w0nderful" width="150">
+                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/UA.gif" alt="Ukraine" width="20">w0nderful</figcaption>
+                    <img src="https://img-cdn.hltv.org/playerbodyshot/4-Np-rU8A5smN0HOkoBF1S.png?ixlib=java-2.1.0&w=400&s=bca40c742d51fe5f79420fee71ecab34" alt="Aleksib" width="150">
+                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/FI.gif" alt="Finland" width="20">Aleksib</figcaption>
+                    <img src="https://img-cdn.hltv.org/playerbodyshot/SkSJ7ErL-8eNeIxlUaHOjp.png?ixlib=java-2.1.0&w=400&s=9a2022dfa6f154b51bd8b7f63d52ff72" alt="jL" width="150">
+                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/LT.gif" alt="Lithuania" width="20">jL</figcaption>
+                    <img src="https://img-cdn.hltv.org/playerbodyshot/E5f7dxodOI8wWBNoTLyWJu.png?ixlib=java-2.1.0&w=400&s=fa2d65c52f79e286d1e92c4ee6110b74" alt="iM" width="150">
+                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/RO.gif" alt="Romania" width="20">iM</figcaption>
+                </figure>
+            </fieldset>
+        </p>
+    </section>
 </body>
 </html>
