--- a/index.html
+++ b/index.html
@@ -1,98 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"
-    <title>CatPhotoApp</title>
-</head>
-<body>
-    <main>
-      <h1>CatPhotoApp</h1>
-      <section>
-        <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-      </section>
-      <section>
-        <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
-        <ul>
-          <li>cat nip</li>
-          <li>laser pointers</li>
-          <li>lasagna</li>
-        </ul>
-        <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
-        </figure>
-        <h3>Top 3 things cats hate:</h3>
-        <ol>
-          <li>flea treatment</li>
-          <li>thunder</li>
-          <li>other cats</li>
-        </ol>
-        <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
-        </figure>
-      </section>
-      <section>
-        <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
-          <fieldset>
-            <legend>Is your cat an indoor or outdoor cat?</legend>
-            <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
-            <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-          </fieldset>
-          <fieldset>
-            <legend>What's your cat's personality?</legend>
-            <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
-            <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
-            <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
-          </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-          <button type="submit">Submit</button>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-      </p>
-    </footer>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cafe Menu</title>
+    <link href="css/styles.css" rel="stylesheet"/>
+  </head>
+  <body>
+    <div class="menu">
+      <main>
+        <h1>CAMPER CAFE</h1>
+        <p class="established">Est. 2020</p>
+        <hr>
+        <section>
+          <h2>Coffee</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
+          <article class="item">
+            <p class="flavor">French Vanilla</p><p class="price">3.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Hazelnut</p><p class="price">4.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Mocha</p><p class="price">4.50</p>
+          </article>
+        </section>
+        <section>
+          <h2>Desserts</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon"/>
+          <article class="item">
+            <p class="dessert">Donut</p><p class="price">1.50</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+          </article>
+        </section>
+      </main>
+      <hr class="bottom-line">
+      <footer>
+        <p>
+          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
+        </p>
+        <p class="address">123 Free Code Camp Drive</p>
+      </footer>
+    </div>
   </body>
 </html>
-<!--<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ukrainians in CS2</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
-</head>
-<body>
-    <h1>Pro teams in CS2 with Ukrainians in roster</h1>
-    <section>
-        <h2>
-            <img src="https://www.hltv.org/img/static/flags/30x20/UA.gif" alt="Ukraine">
-            Natus Vincere 
-            <img src="https://img-cdn.hltv.org/teamlogo/9iMirAi7ArBLNU8p3kqUTZ.svg?ixlib=java-2.1.0&s=4dd8635be16122656093ae9884675d0c" alt="natus_vincere" width="50">
-        </h2>
-        <p>
-            <fieldset>
-                <figure >
-                    <img src="https://img-cdn.hltv.org/playerbodyshot/b29J2ESjLLqO1XxMSOjRR9.png?ixlib=java-2.1.0&w=400&s=247d23aa96632ab1fa5c77b5c7d1a62a" alt="b1t" width="150">
-                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/UA.gif" alt="Ukraine" width="20">b1t</figcaption>
-                    <img src="https://img-cdn.hltv.org/playerbodyshot/5rF2y0CYgGthv6O3qyfQlK.png?ixlib=java-2.1.0&w=400&s=aac1842164cf6f247fdabfb18a57009e" alt="w0nderful" width="150">
-                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/UA.gif" alt="Ukraine" width="20">w0nderful</figcaption>
-                    <img src="https://img-cdn.hltv.org/playerbodyshot/4-Np-rU8A5smN0HOkoBF1S.png?ixlib=java-2.1.0&w=400&s=bca40c742d51fe5f79420fee71ecab34" alt="Aleksib" width="150">
-                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/FI.gif" alt="Finland" width="20">Aleksib</figcaption>
-                    <img src="https://img-cdn.hltv.org/playerbodyshot/SkSJ7ErL-8eNeIxlUaHOjp.png?ixlib=java-2.1.0&w=400&s=9a2022dfa6f154b51bd8b7f63d52ff72" alt="jL" width="150">
-                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/LT.gif" alt="Lithuania" width="20">jL</figcaption>
-                    <img src="https://img-cdn.hltv.org/playerbodyshot/E5f7dxodOI8wWBNoTLyWJu.png?ixlib=java-2.1.0&w=400&s=fa2d65c52f79e286d1e92c4ee6110b74" alt="iM" width="150">
-                    <figcaption><img src="https://www.hltv.org/img/static/flags/30x20/RO.gif" alt="Romania" width="20">iM</figcaption>
-                </figure>
-            </fieldset>
-        </p>
-    </section>
-</body>
-</html>-->
